[package]
name = "my-portfolio"
version = "0.1.0"
authors = ["Melchior MOULIN"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.9"
clap = "2.33.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
yahoo_finance_api = {"version" = "1.0"}
futures = "0.3"
tokio= {version="1",features = ["full"]}